# auto_shutdown

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  crontab  docker-compose.yaml  docker-compose.yaml.example  entrypoint.sh  pyproject.toml  run_script.sh  shutdown_script.py  todo.md
