[project]
name = "auto-shutdown"
version = "0.1.0"
description = "This repository is a python script run via docker to shutdown my TrueNAS instance when electricity goes off"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ggshield>=1.36.0",
    "pytest>=8.3.4",
    "pytest-playwright>=0.7.0",
    "pytz>=2025.1",
    "websockets>=14.2",
]
